# Project2---Newsference

./: .gitignore  README.md  SETUP.md  hello.py  main.py  pyproject.toml  server.py
freezed-demo/dc-plane-crash/: News Analysis.html
freezed-demo/dc-plane-crash/News Analysis_files/: my.css
freezed-demo/trump-tariffs/: News Analysis.html
front-end/: tester.txt
front-end/my-app/src/: App.css  App.js
front-end/my-app/src/assets/: Trump.avif
static/: styles.css
templates/: index.html
